--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,7 +1,8 @@
 {
-    "name": "ludeeus/integration_blueprint",
+    "name": "engie_be",
     "image": "mcr.microsoft.com/devcontainers/python:3.13",
-    "postCreateCommand": "scripts/setup",
+    "appPort": [8123],
+    "postCreateCommand": "sudo apt-get update && sudo apt-get install -y --no-install-recommends ffmpeg libturbojpeg0 libpcap-dev && scripts/setup",
     "forwardPorts": [
         8123
     ],
@@ -37,9 +38,9 @@
         }
     },
     "remoteUser": "vscode",
-    "features": {
-        "ghcr.io/devcontainers-extra/features/apt-packages:1": {
-            "packages": "ffmpeg,libturbojpeg0,libpcap-dev"
-        }
-    }
+    "runArgs": [
+        "--userns=keep-id",
+        "--security-opt=label=disable"
+    ],
+    "containerUser": "vscode"
 }
