--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -32,5 +32,5 @@ jobs:
         uses: hacs/action@d556e736723344f83838d08488c983a15381059a # 22.5.0
         with:
           category: integration
-          # Remove this 'ignore' key when you have added brand images for your integration to https://github.com/home-assistant/brands
+          # Ignored until brand images are submitted to https://github.com/home-assistant/brands
           ignore: brands
