--- a/custom_components/engie_be/manifest.json
+++ b/custom_components/engie_be/manifest.json
@@ -6,6 +6,7 @@
   ],
   "config_flow": true,
   "documentation": "https://github.com/DaanVervacke/hass-engie-be",
+  "integration_type": "service",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/DaanVervacke/hass-engie-be/issues",
   "version": "0.1.0"
